# AI-Email-Spam-Detector

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  credentials.json.example  docker-compose.yml  evaluation_results.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
data/: spam_dataset.csv
docs/: API.md  DEPLOYMENT.md  GMAIL_INTEGRATION.md
frontend/: index.html
models/: spam_detector.joblib
scripts/: check_email.py  evaluate_model.py  explain_prediction.py  generate_dataset.py  retrain_model.py  run_api.py  run_gmail_spam_detector.py  train_spam_detector.py
src/spam_detector/: __init__.py
src/spam_detector/advanced/: __init__.py
src/spam_detector/api/: __init__.py  dependencies.py  main.py  schemas.py
src/spam_detector/api/routes/: __init__.py  dashboard.py  feedback.py  health.py  predict.py  stats.py
src/spam_detector/core/: __init__.py  exceptions.py  logging.py  settings.py
src/spam_detector/db/: __init__.py  mongo.py
src/spam_detector/db/repositories/: __init__.py  prediction_repo.py
src/spam_detector/features/: __init__.py  feature_extraction.py
src/spam_detector/gmail/: __init__.py  auth.py  client.py  exceptions.py  processor.py
src/spam_detector/learning/: __init__.py
src/spam_detector/ml/: __init__.py  model_service.py
src/spam_detector/models/: __init__.py  model_factory.py
src/spam_detector/nlp/: __init__.py  preprocessing.py
src/spam_detector/training/: __init__.py  dataset.py  evaluation.py  model_io.py  trainer.py
tests/: __init__.py  conftest.py  test_api_dashboard.py  test_api_feedback.py  test_api_predict.py  test_dataset.py  test_model_service.py
