[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-spam-detector"
version = "1.0.0"
description = "AI-powered email spam detection system using NLP and ML"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scikit-learn",
    "spacy",
    "nltk",
    "joblib",
    "fastapi",
    "uvicorn[standard]",
    "pymongo",
    "pydantic-settings",
    "google-api-python-client",
    "google-auth",
    "requests",
    "lime",
    "shap",
    "langdetect",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
spam-detector-train = "scripts.train_spam_detector:main"
spam-detector-api = "scripts.run_api:main"
spam-detector-retrain = "scripts.retrain_model:main"
spam-detector-gmail = "scripts.run_gmail_spam_detector:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
]
